CSS/styles.css
#target {
    margin-top: 12px; 
    font-size: 125%; 
    font-weight: bold; 
    font-variant: small-caps; 
    color: black
  }
  #target:hover {
    color: whitesmoke
  }
  
  h1 {
    font-size: 300%; 
    font-family: verdana; 
    color: rgb(41, 41, 41);
    border: #f7f7f7 solid white
  }
  
  #main{
    background: url("/IMG/background.jpg") no-repeat center center fixed; 
      -webkit-background-size: cover;
      -moz-background-size: cover;
      -o-background-size: cover;
      background-size: cover;
  }
  
  #part1 {
    width:100%;
    text-align:center; 
    height: 100vh; 
    padding-top:20%;
  }

